# nrf52832_dm

./: .gitignore  README.md
nrf52_dm_boot/: CMakeLists.txt  README.md
nrf52_dm_boot/src/ap/: ap.c
nrf52_dm_boot/src/bsp/: bsp.c  bsp.h  nrfx_config.h  nrfx_glue.h
nrf52_dm_boot/src/bsp/ldscript/: NRF52832_FLASH.ld
nrf52_dm_boot/src/hw/: hw.c  hw.h  hw_def.h
nrf52_dm_boot/src/hw/driver/: reset.c  sleep.c  timer.c  uart.c
nrf52_dm_boot/tools/: toolchain.cmake
